# Client-ServerQt

./: .gitignore  README.md
ClientQt/: CMakeLists.txt  Catalog.h  Client.cpp  Client.h  ClientQt.cpp  ClientQt.h  ClientQt.qrc  ClientQt.sln  ClientQt.ui  ClientQt.vcxproj  ClientQt.vcxproj.filters  Component.h  ComponentsTable.cpp  LibrariesWidget.cpp  LibrariesWidget.h  Library.h  LibraryManager.cpp  LibraryManager.h  convertSvgToIcon.cpp  convertSvgToIcon.h  main.cpp
ClientQt/configuration/: config.json
ServerQt/: CMakeLists.txt  HttpRequestHandler.cpp  HttpRequestHandler.h  Server.cpp  Server.h  ServerQt.sln  ServerQt.vcxproj  ServerQt.vcxproj.filters  main.cpp
ServerQt/Libraries/064870ea-f796-4bea-b558-908469faf142/: library.json
ServerQt/Libraries/064870ea-f796-4bea-b558-908469faf142/components/: ANGELOV_FET.json  BEND.json  C.json  DC_SWEEP.json  L.json  LIN_FET.json  MBEND.json  MBENDQS.json  MCROS.json  MCROSQS.json  MLEF.json  MLEFQS.json  MLIN.json  MLINQS.json  MLOC.json  MLOCQS.json  MOPENQS.json  MSTEP.json  MSTEPQS.json  MSUB.json  MSUB1QS.json  MTEE.json  MTEEQS.json  NPORT.json  R.json  S_PARAM.json  TERM.json  TLIN.json  V_DC.json
ServerQt/files/: test.txt
